Fix issues with paddings on smaller PC screens

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -4,20 +4,20 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 6rem 1rem 1rem 1rem;
-    padding: 3rem 8rem 8rem 8rem;
+    padding: 6rem 8rem;
     position: relative;
     gap: 6rem;
     background-color: hsla(278, 47%, 64%, 0.15);
     border-radius: 0.6rem;
 
     @include small-desktop-up {
-        margin: 5.6rem 1rem -1rem 1rem;
-        padding: 4rem 5rem 5rem 5rem;
+        margin: 6rem 1rem 1rem 1rem;
+        padding: 4rem;
     }
 
     @include large-desktop-up {
         margin: 7rem 8rem;
-        padding: 4rem 13rem 10rem 13rem;
+        padding: 6rem 13rem;
     }
 
     &__image-wrapper {
@@ -25,6 +25,12 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, 0%);
+
+        @include small-desktop-up {
+            top: 55%;
+        }
+
+        @include large-desktop-up {}
     }
 
     &__img {
